# arcolorbalancing

./: .gitignore  CMakeLists.txt  README.md
extras/: octave-workspace  scatterplot.m
include/: colors.h  datahelpers.h  mathext.h  rbf.h
samples/: checker_template.psd
src/: main.cpp
src/utils/: randomPoints.cpp  sampleColorsImagePair.cpp
